[gd_scene load_steps=10 format=3 uid="uid://bgilkp0xevdll"]

[ext_resource type="Script" uid="uid://s2grr1g5wylc" path="res://addons/structura/editor/structura_editor.gd" id="1_wwam6"]
[ext_resource type="Script" uid="uid://bie1sp8h3dmc8" path="res://addons/structura/graph_viewport/graph_viewport.gd" id="2_6cu81"]
[ext_resource type="Resource" uid="uid://baf1tslvjaw58" path="res://Level_1Data.tres" id="2_r8jvi"]
[ext_resource type="Script" uid="uid://dj43u5rb141sg" path="res://addons/structura/Coordinates/coordinates.gd" id="3_eltl8"]
[ext_resource type="Theme" uid="uid://dlty2bwyj3nd7" path="res://addons/structura/assets/Theme.tres" id="3_kvgj1"]
[ext_resource type="FontFile" uid="uid://gpkexih8ki4e" path="res://addons/structura/assets/font/DIN.ttf" id="4_vi1xm"]
[ext_resource type="Script" uid="uid://xwcrl1v2abra" path="res://addons/structura/data/tool_system.gd" id="6_xgd66"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xgd66"]
bg_color = Color(0.172549, 0.172549, 0.172549, 0.392157)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Theme" id="Theme_xgd66"]
default_font = ExtResource("4_vi1xm")
default_font_size = 18

[node name="StructuraEditor" type="Control" node_paths=PackedStringArray("grid_label", "snap_button", "viewports")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wwam6")
grid_label = NodePath("VBoxContainer/HBoxContainer/GridSize")
snap_button = NodePath("VBoxContainer/HBoxContainer/Snap")
level_data = ExtResource("2_r8jvi")
viewports = [NodePath("VBoxContainer/GridContainer/Top"), NodePath("VBoxContainer/GridContainer/Side"), NodePath("VBoxContainer/GridContainer/Front")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="-Grid" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
theme = ExtResource("3_kvgj1")
text = "-"

[node name="GridSize" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
theme = ExtResource("3_kvgj1")
text = "Grid size: 16"
horizontal_alignment = 1
vertical_alignment = 1

[node name="+Grid" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
theme = ExtResource("3_kvgj1")
text = "-"

[node name="Snap" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
theme = ExtResource("3_kvgj1")
text = "Snapping: Disabled"

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 2
theme = ExtResource("3_kvgj1")
text = "Delete mesh"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Top" type="ColorRect" parent="VBoxContainer/GridContainer" node_paths=PackedStringArray("coordinates", "orientation_l", "_editor")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.0189439, 0.0989648, 0.185043, 1)
script = ExtResource("2_6cu81")
grid_line_color = Color(0.330702, 0.399238, 0.542666, 1)
coordinates = NodePath("Coordinates")
orientation_l = NodePath("Orientation/Label")
_editor = NodePath("../../..")

[node name="ToolSystem" type="Control" parent="VBoxContainer/GridContainer/Top" node_paths=PackedStringArray("editor", "viewport")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("6_xgd66")
editor = NodePath("../../../..")
viewport = NodePath("..")

[node name="Coordinates" type="Control" parent="VBoxContainer/GridContainer/Top" node_paths=PackedStringArray("editor", "viewport")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_eltl8")
editor = NodePath("../../../..")
viewport = NodePath("..")
max_pool_size = 125
position_offset = Vector2(-9, -14)
font = ExtResource("4_vi1xm")

[node name="Orientation" type="PanelContainer" parent="VBoxContainer/GridContainer/Top"]
custom_minimum_size = Vector2(64, 28)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0260417
anchor_top = 0.91358
anchor_right = 0.0954861
anchor_bottom = 0.95679
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_xgd66")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/Top/Orientation"]
layout_mode = 2
theme = SubResource("Theme_xgd66")
text = "TOP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Side" type="ColorRect" parent="VBoxContainer/GridContainer" node_paths=PackedStringArray("coordinates", "orientation_l", "_editor")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.0189439, 0.0989648, 0.185043, 1)
script = ExtResource("2_6cu81")
orientation = 1
grid_line_color = Color(0.330702, 0.399238, 0.542666, 1)
coordinates = NodePath("Coordinates")
orientation_l = NodePath("Orientation/Label")
_editor = NodePath("../../..")

[node name="ToolSystem" type="Control" parent="VBoxContainer/GridContainer/Side" node_paths=PackedStringArray("editor", "viewport")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("6_xgd66")
editor = NodePath("../../../..")
viewport = NodePath("..")

[node name="Coordinates" type="Control" parent="VBoxContainer/GridContainer/Side" node_paths=PackedStringArray("editor", "viewport")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_eltl8")
editor = NodePath("../../../..")
viewport = NodePath("..")
max_pool_size = 125
position_offset = Vector2(-9, -14)
font = ExtResource("4_vi1xm")

[node name="Orientation" type="PanelContainer" parent="VBoxContainer/GridContainer/Side"]
custom_minimum_size = Vector2(64, 28)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0260417
anchor_top = 0.91358
anchor_right = 0.0954861
anchor_bottom = 0.95679
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_xgd66")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/Side/Orientation"]
layout_mode = 2
theme = SubResource("Theme_xgd66")
text = "SIDE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Front" type="ColorRect" parent="VBoxContainer/GridContainer" node_paths=PackedStringArray("coordinates", "orientation_l", "_editor")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.0189439, 0.0989648, 0.185043, 1)
script = ExtResource("2_6cu81")
orientation = 2
grid_line_color = Color(0.330702, 0.399238, 0.542666, 1)
coordinates = NodePath("Coordinates")
orientation_l = NodePath("Orientation/Label")
_editor = NodePath("../../..")

[node name="ToolSystem" type="Control" parent="VBoxContainer/GridContainer/Front" node_paths=PackedStringArray("editor", "viewport")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("6_xgd66")
editor = NodePath("../../../..")
viewport = NodePath("..")

[node name="Coordinates" type="Control" parent="VBoxContainer/GridContainer/Front" node_paths=PackedStringArray("editor", "viewport")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_eltl8")
editor = NodePath("../../../..")
viewport = NodePath("..")
max_pool_size = 125
position_offset = Vector2(-9, -14)
font = ExtResource("4_vi1xm")

[node name="Orientation" type="PanelContainer" parent="VBoxContainer/GridContainer/Front"]
custom_minimum_size = Vector2(64, 28)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0260417
anchor_top = 0.91358
anchor_right = 0.0954861
anchor_bottom = 0.95679
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_xgd66")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/Front/Orientation"]
layout_mode = 2
theme = SubResource("Theme_xgd66")
text = "FRONT"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/-Grid" to="." method="_on_minus_grid_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/+Grid" to="." method="_on_plus_grid_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Snap" to="." method="_on_snap_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="item_rect_changed" from="VBoxContainer/GridContainer/Top" to="VBoxContainer/GridContainer/Top" method="_on_item_rect_changed"]
[connection signal="item_rect_changed" from="VBoxContainer/GridContainer/Side" to="VBoxContainer/GridContainer/Side" method="_on_item_rect_changed"]
[connection signal="item_rect_changed" from="VBoxContainer/GridContainer/Front" to="VBoxContainer/GridContainer/Front" method="_on_item_rect_changed"]
